--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "fs-extra": "^11.1.1",
-    "html-pdf": "^3.0.1"
+    "html-pdf": "^3.0.1",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
