--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
     "html-pdf": "^3.0.1",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
