--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
     "html-pdf": "^3.0.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "sqlite3": "^5.1.7"
   },
