--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Environment variables
 .env
@@ -35,4 +35,19 @@ dist/
 build/
 
 # Server data
-server/data/ 
+server/data/
+
+# Data
+data/
+*.db
+*.db-journal
+
+# IDE/Editor specific
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS generated files
+.DS_Store
+Thumbs.db 
